@@ -1,3 +1,9 @@
+2006-05-29  Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Character deletion suggestions
+	* Character insertion suggestions
+	* Character swap suggestions
+
 2006-05-27  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Character replacing suggestions
